--- a/exec/A104 포팅매뉴얼.md
+++ b/exec/A104 포팅매뉴얼.md
@@ -609,9 +609,21 @@ gitlab 프로젝트 exec/DBdump 디렉토리에 업로드했습니다.
 # 5. 시연 시나리오
 
 ## (1) 사용자
-
+1. 타이틀 화면에서 건물 이름을 클릭하고 화장실 현황이 보이는 화면으로 이동합니다.
+2. 우측 스크롤을 움직여서 찾아보고싶은 화장실 층수를 선택합니다.
+3. 화장실 화면에서 각 칸에 대한 정보(사용가능, 사용중, 고장, 점검중)를 확인합니다.
+4. 우측 리스트에서 화장실 혼잡도 정보(원활, 혼잡, 포화, 없음)를 확인합니다.
+5. 신고를 보내고 싶은 화장실 칸을 클릭해서 신고 화면으로 이동합니다.
+6. 신고화면에서 신고사유(위생, 파손, 기타)를 선택하고 필요시 신고내용을 작성해서 제출합니다.
 ## (2) 관리자
-
+1. main화면에서 화장실 현황 버튼을 클릭하면 사용자 페이지의 화장실 현황과 같은 레이아웃 화면으로 이동합니다.
+2. 관리자 페이지에서 화장실 칸을 클릭하면 상태 변경 페이지로 이동합니다.
+3. 변경하고 싶은 상태(사용가능, 고장, 점검중)를 클릭하고 확인버튼을 누르면 그 칸의 상태가 변경됩니다.
+4. main화면에서 화장실 등록 버튼을 클릭하면 화장실 등록화면으로 이동합니다.
+5. 화장실의 가로세로 격자 개수와 성별 층수를 입력하고 각 칸에 대한 정보(화장실 -> 입구 -> 빈칸 -> 화장실)를 클릭으로 변경하고 제출하면 새로운 화장실 정보가 등록됩니다.
+6. 화장실 알림 버튼을 클릭하면 관리자에게 들어온 신고 내용이 우측 리스트에 표시됩니다.
+7. 특정 신고 내용을 클릭하면 신고가 접수된 화장실칸의 층수, 성별, 번호 정보가 표시되고 클릭하면 그 화장실 칸이 존재하는 화장실 현황 화면으로 바로 이동합니다.
+8. main화면에서 화장실 통계 버튼을 클릭하고 층수와 성별을 선택해서 제출했을 때 그 화장실에 대한 이용 통계 정보가 표시됩니다.
 ---
 
 ## 기타
