--- a/exec/포팅매뉴얼.md
+++ b/exec/포팅매뉴얼.md
@@ -415,7 +415,7 @@ server {
 
 ## (5) SSL 적용
 
-- Certbot을 이용하여 프론트엔드 백엔드 서버에 SSL을 적용합니다.
+- Certbot을 이용하여 프론트엔드, 백엔드 서버에 SSL을 적용합니다.
 
 ```bash
 sudo add-apt-repository ppa:certbot/certbot
@@ -501,7 +501,7 @@ logging.level.root=DEBUG
 # netty server
 netty.server.port = 8200
 
-jwt.secret.key=f2c0d20c7b9f5117c70bf12421b4d3e191acc914bafa43592963e4c08d7b297f
+jwt.secret.key={your secret key}
 
 # mail send
 spring.mail.host=smtp.address
